--- a/skin-detector/package.json
+++ b/skin-detector/package.json
@@ -8,8 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@types/react-native": "^0.66.6",
     "expo": "~43.0.0",
+    "expo-camera": "~12.0.3",
     "expo-image-picker": "~11.0.3",
+    "expo-media-library": "~13.0.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -17,7 +20,8 @@
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
