--- a/skin-detector/package.json
+++ b/skin-detector/package.json
@@ -8,15 +8,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@tensorflow/tfjs": "^3.11.0",
+    "@tensorflow/tfjs-react-native": "^0.8.0",
     "@types/react-native": "^0.66.6",
     "expo": "~43.0.0",
     "expo-camera": "~12.0.3",
+    "expo-gl": "~11.0.3",
+    "expo-gl-cpp": "~11.0.1",
     "expo-image-picker": "~11.0.3",
     "expo-media-library": "~13.0.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-fs": "^2.18.0",
+    "react-native-unimodules": "~0.15.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
