--- a/skin-detector/package.json
+++ b/skin-detector/package.json
@@ -1,9 +1,8 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
@@ -14,21 +13,29 @@
     "@types/react-native": "^0.66.6",
     "expo": "~43.0.0",
     "expo-camera": "~12.0.3",
+    "expo-file-system": "~13.0.3",
     "expo-gl": "~11.0.3",
     "expo-gl-cpp": "~11.0.1",
     "expo-image-picker": "~11.0.3",
     "expo-media-library": "~13.0.3",
+    "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
+    "expo-updates": "~0.10.13",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.2",
+    "react-native": "0.64.3",
     "react-native-fs": "^2.18.0",
-    "react-native-unimodules": "~0.15.0",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "typescript": "~4.3.5"
   },
-  "private": true
+  "private": true,
+  "name": "skin-detector",
+  "version": "1.0.0"
 }
